--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Bettyheadshot001.jpeg"></td>
+      <td><img src="Images/Bettyheadshot001.jpeg"></td>
       <td><h1>Betty Gomez</h1>
       <p>
         <em>Software Developer</em>
